src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  header {
    font-family: 'Bitter', serif;
  }

  html {
    font-family: 'Lato', sans-serif;
  }

  main {
    min-height: calc(100vh - 200px);
    overflow-x: hidden;
  }

  #root {
    overflow-x: hidden;
  }

  .active {
    background-color: #535051;
  }

  h2 {
    user-select: none;
  }
}

